# aoc

./: LICENSE  aoc.cabal  cabal.project  package.yaml  shell.nix
app/: Main.hs
src/: AOC201501.hs  AOC201502.hs  AOC201503.hs  AOC201504.hs  AOC201505.hs  AOC201506.hs
