cabal-version: 1.12

name:           aoc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tomwadeson/aoc#readme>
homepage:       https://github.com/tomwadeson/aoc#readme
bug-reports:    https://github.com/tomwadeson/aoc/issues
author:         Tom Wadeson
maintainer:     tom@tomwadeson.com
copyright:      2018 Tom Wadeson
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/tomwadeson/aoc

library
  exposed-modules:
      AOC201501
      AOC201502
      AOC201503
      AOC201504
      AOC201505
      AOC201506
  hs-source-dirs:
      src
  build-depends:
      MissingH
    , base >=4.7 && <5
    , containers
    , doctest
    , doctest-discover
    , megaparsec
    , mtl
  default-language: Haskell2010

executable aoc-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc
    , base >=4.7 && <5
  default-language: Haskell2010
