cabal-version:  2.2

name:           aoc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tomwadeson/aoc#readme>
homepage:       https://github.com/tomwadeson/aoc#readme
bug-reports:    https://github.com/tomwadeson/aoc/issues
author:         Tom Wadeson
maintainer:     tom@tomwadeson.com
copyright:      2018 Tom Wadeson
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/tomwadeson/aoc

common shared
  ghc-options: -Wall -Werror
  default-language: Haskell2010
  build-depends:
      base >= 4.7 && < 5

library
  import: shared
  exposed-modules:
      AOC201501
      AOC201502
      AOC201503
      AOC201504
      AOC201505
      AOC201506
  hs-source-dirs:
      src
  build-depends:
      MissingH
    , containers
    , doctest
    , doctest-discover
    , megaparsec
    , mtl

executable aoc-exe
  import: shared
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc
